[package]
name = "hyperfs"
description = "A simple HTTP server for static files"
version = "2.1.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
license = "MIT"
repository = "https://github.com/tmccombs/hyperfs"
edition = "2018"

[dependencies]
hyper = "0.13"
http = "0.2"
futures-util = "0.3"

[dependencies.tokio]
version = "0.2"
features = ["fs", "macros"]

[dependencies.tokio-util]
version = "0.2"
features = ["codec"]

[profile.release]
lto = true
codegen-units = 1
