[package]
name = "hyperfs"
description = "A simple HTTP server for static files"
version = "3.0.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
license = "MIT"
repository = "https://github.com/tmccombs/hyperfs"
edition = "2021"

[dependencies]
http = "1.0"
http-body-util = "0.1.0"
futures-util = "0.3"

[dependencies.tokio]
version = "1.0.2"
features = ["rt-multi-thread", "fs", "net", "macros"]

[dependencies.tokio-util]
version = "0.7.3"
features = ["io"]

[dependencies.hyper]
version = "1.0"
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio", "server-auto"]

[profile.release]
lto = true
codegen-units = 1
